Bug 966998 - WebGL OES_vertex_array_object windows presence is low. r=jgilbert